# doc-generator

./: LICENSE  README.md  pyproject.toml
csdocgen/: generator.py  main.py
src/: cli.py  config.py  csharp_parser.py  documentation_generator.py  documentation_inserter.py  gemini_model_manager.py  main.py  model_engine.py  model_manager.py  prompts.py  xml_parser.py
test/: test.cs
