[tool.poetry]
name = "xml-doc-filler"
version = "0.1.0"
description = "Narzędzie do automatycznego uzupełniania tagów <Description> w plikach XML z dokumentacją C# przy użyciu lokalnego modelu LLM"
authors = ["Twoje Imię <email@example.com>"]
readme = "README.md"
packages = [{ include = "xml_doc_filler" }]

[tool.poetry.dependencies]
python = "^3.10"
llama-cpp-python = "^0.2.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
